--- a/customer_propensity_modelling.ipynb
+++ b/customer_propensity_modelling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RRD MARKETING ANALYTICS ASSIGNMENT\n",
+    "MARKETING ANALYTICS PROJECT\n",
     "\n",
     "Context :-\n",
     "\n",
